fix section spacing and button shadow

--- a/css/groovy_cards.css
+++ b/css/groovy_cards.css
@@ -58,8 +58,9 @@
     padding: 5px 0px;
 }
 
-.no-ul {
+.kard-title {
     text-decoration: none;
+    color: rgb(31, 176, 253);
 }
 
 .description {
@@ -82,5 +83,5 @@
 .g-button:hover{
     -webkit-transform: translateY(-1px);
     transform: translateY(-1px); 
-    box-shadow: 0px 1px 1px var(--opaque);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.8);
 }
